--- a/msa_back/manager_msa/templates/Videos/main.html
+++ b/msa_back/manager_msa/templates/Videos/main.html
@@ -58,7 +58,7 @@
 
     <div class="container mb-3">
         <h2 class="text-white mb-3">Recomendações para você</h2>
-        
+        <!-- <p class="text-white">{{videos.results}}</p> -->
         <div class="row mb-3">
             <!-- Swiper -->
             <div class="mb-3">
@@ -78,7 +78,7 @@
                                             <h6 class="card-subtitle text-black">{{video.name}}</h6>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-end mt-auto">
-                                            <span class="card-text fs-6">{{ video.first_air_date }}</span>
+                                            <span class="card-text fs-6">{{ video.first_air_date_format }}</span>
                                             {% if video.vote_average >= 7 %}
                                             <span class="badge text-bg-success">
                                                 <i class="fa-solid fa-star me-1"></i>
@@ -115,7 +115,7 @@
                                             <h6 class="card-subtitle text-black">{{video.title}}</h6>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-end mt-auto">
-                                            <span class="card-text fs-6">{{ video.release_date }}</span>
+                                            <span class="card-text fs-6">{{ video.release_date_format }}</span>
                                             {% if video.vote_average >= 7 %}
                                             <span class="badge text-bg-success">
                                                 <i class="fa-solid fa-star me-1"></i>
@@ -150,7 +150,6 @@
             </div>
         </div>
 
-
         <h2 class="text-white mb-3">Filmes</h2>
         <div class="mb-3">
             <div class="swiper mySwiper">
@@ -167,7 +166,7 @@
                                         <h6 class="card-subtitle text-black">{{movie.title}}</h6>
                                     </div>
                                     <div class="d-flex justify-content-between align-items-end mt-auto">
-                                        <span class="card-text fs-6">{{ movie.release_date }}</span>
+                                        <span class="card-text fs-6">{{ movie.release_date_format }}</span>
                                         {% if movie.vote_average >= 7 %}
                                         <span class="badge text-bg-success">
                                             <i class="fa-solid fa-star me-1"></i>
@@ -214,7 +213,7 @@
                                         <h6 class="card-subtitle text-black">{{serie.name}}</h6>
                                     </div>
                                     <div class="d-flex justify-content-between align-items-end mt-auto">
-                                        <span class="card-text fs-6">{{ serie.first_air_date }}</span>
+                                        <span class="card-text fs-6">{{ serie.first_air_date_format }}</span>
                                         {% if serie.vote_average >= 7 %}
                                         <span class="badge text-bg-success">
                                             <i class="fa-solid fa-star me-1"></i>
