--- a/msa_back/manager_msa/templates/Videos/infos.html
+++ b/msa_back/manager_msa/templates/Videos/infos.html
@@ -10,19 +10,39 @@
                 {{ alert.msg }}
             </div>
         {% endif %}
-        <div class="row mb-3">
+        <div class="row mb-3 ">
             <div class="col-md-3">
                 <img class="rounded w-100" src="https://www.themoviedb.org/t/p/original/{{details.poster_path}}">
             </div>
-            <div class="col">
+            <div class="col align-self-center">
                 <div class="d-flex justify-content-between align-middle">
                     <div>
                         {% if details.type_video == 'movie' %}
                         <h2 class="mb-1 m-0">{{details.title}}</h2>
-                        <p class="mb-3 m-0"><strong>Título original:</strong> {{details.original_title}}</p>
+                        <p class="mb-1 m-0"><strong>Título original:</strong> {{details.original_title}}</p>
+                        <div class="d-flex gap-3 mb-3">
+                            <span>{{details.release_date_format}}</span>
+                            {% for indicativa in release_date.results %}
+                                {% if indicativa.iso_3166_1 == 'BR' %}
+                                    {% for classification in indicativa.release_dates %}
+                                        <span class="badge text-bg-light" style="padding-top: .4rem;"><strong>{{classification.certification}}</strong></span>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
                         {% else %}
                         <h2 class="mb-1 m-0">{{details.name}}</h2>
-                        <p class="mb-3 m-0"><strong>Título original:</strong> {{details.original_name}}</p>
+                        <p class="mb-1 m-0"><strong>Título original:</strong> {{details.original_name}}</p>
+                        <div class="d-flex gap-3 mb-3">
+                            <span>{{details.first_air_date_format}}</span>
+                            {% for indicativa in release_date.results %}
+                                {% if indicativa.iso_3166_1 == 'BR' %}
+                                    {% for classification in indicativa.release_dates %}
+                                        <span class="badge text-bg-light" style="padding-top: .4rem;"><strong>{{classification.certification}}</strong></span>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
                         {% endif %}
                         <div class="mt-2 d-inline gap-2 flex-wrap">
                             {% for d in details.genres %}
@@ -52,88 +72,167 @@
                     </div>
                 </div>
                 
-                <form method="GET" class="d-flex gap-2 mb-3">
+                <form method="POST" class="d-flex gap-2 mb-3">
                     {% csrf_token %}
                     <!-- <button type="submit" class="btn btn-success">
                         <i class="fa-solid fa-list"></i> Adicionar na lista
                     </button> -->
-                    <button type="submit" class="btn btn-success">
-                        <i class="fa-regular fa-bookmark me-1"></i> Adicionar na lista
-                    </button>
+                    
+                    {% if details.is_list == false %}
+                        <button type="submit" class="btn btn-success" name="addMovie" id="addMovie">
+                            <i class="fa-regular fa-bookmark me-1"></i> Adicionar na lista
+                        </button>
+                    {% else %}
+                        <a href="{% url 'delete-movie' details.id_movie %}" class="btn btn-danger" name="removeMovie" id="removeMovie">
+                            <i class="fa-solid fa-bookmark"></i> Remover da lista
+                        </a>
+                    {% endif %}
                     <a href="{% url 'lista' user.id %}" class="btn btn-primary">
                         <i class="fa-solid fa-list me-1"></i> Ver lista de Filmes
                     </a>
-                    <div class="dropdown">
-                        <button class="btn btn-info dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Avaliação
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="dropdown-item" href="{% url 'rating-movie' details.id 0 %}">
-                                    Sem Avaliação
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{% url 'rating-movie' details.id 1 %}">
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{% url 'rating-movie' details.id 2 %}">
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{% url 'rating-movie' details.id 3 %}">
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{% url 'rating-movie' details.id 4 %}">
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{% url 'rating-movie' details.id 5 %}">
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                    <i class="fa-solid fa-star text-warning"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                    {% if details.is_list %}
+                        <div class="dropdown">
+                            <button class="btn btn-info dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Avaliação
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'rating-movie' details.id 0 %}" id="0">
+                                        Sem Avaliação
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'rating-movie' details.id 1 %}" id="1">
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'rating-movie' details.id 2 %}" id="2">
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'rating-movie' details.id 3 %}" id="3">
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'rating-movie' details.id 4 %}" id="4">
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'rating-movie' details.id 5 %}" id="5">
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                        <i class="fa-solid fa-star text-warning"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    {% endif %}
                 </form>
 
                 <span>
                     <p class="text-white-50"><em>{{ details.tagline }}</em></p>
                 </span>
-                <div class="mb-3">
-                    <p class="m-0"><strong>Duração:</strong></p>
-                    <span>{{ details.runtime }} Minutos</span>
-                </div>
-                <!-- <p>{{ details }}</p> -->
 
-                <div>
-                    <p class="m-0"><strong>Direção:</strong></p>
-                    {% for c in credits.crew %}
-                        {% if c.job == 'Director' %}
-                            <p>{{c.name}}</p>
-                        {% endif %}
+                {% if details.type_video == 'movie' %}
+                    <div class="mb-3">
+                        <p class="m-0"><strong>Duração:</strong></p>
+                        <span>{{ details.runtime }} Minutos</span>
+                    </div>
+                    <!-- <p>{{ details }}</p> -->
+                
+                    <div class="row">
+                        <div class="col-md-4">
+                            <p class="m-0"><strong>Direção:</strong></p>
+                            {% for c in credits.crew %}
+                                {% if c.job == 'Director' %}
+                                    <p>{{c.name}}, </p>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <div class="col">
+                            <p class="m-0"><strong>Escrito:</strong></p>
+                            {% for c in credits.crew %}
+                                {% if c.job == 'Writer' %}
+                                    <p class="d-inline">{{c.name}}, </p>  
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+        <div class="bg-light text-black p-3 rounded mb-3">
+            <div>
+                <h3><strong>Sinopse</strong></h3>
+                {{ details.overview }}
+            </div>
+            <div class="mt-3">
+                <h3><strong>Imagens</strong></h3>
+                <!-- <div class="overflow-x-scroll row gx-4">
+                    {% for img in images.backdrops %}
+                        <img class="rounded" src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/{{img.file_path}}">
                     {% endfor %}
+                </div> -->
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        {% for img in images.backdrops %}
+                        <div class="swiper-slide"><img class="rounded" src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/{{img.file_path}}"></div>
+                        {% endfor %}
+                    </div>
+                    <!-- If we need navigation buttons  -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                    <!-- <div class="swiper-pagination"></div> -->
                 </div>
             </div>
         </div>
-        <div class="bg-light text-black p-3 rounded">
-            <h3><strong>Sinopse</strong></h3>
-            {{ details.overview }}
-        </div>
     </div>
+{% block scripts %} 
+<script>
+    element = document.getElementById({{details.rating_personal}})
+    
+    element.setAttribute("class", "dropdown-item active");
+    
+
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 2,
+      spaceBetween: 10,
+      loop: true,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: false,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev'
+      },
+      breakpoints: {
+        640: {
+          slidesPerView: 1,
+          spaceBetween: 100,
+        },
+        768: {
+          slidesPerView: 1,
+          spaceBetween: 400,
+        },
+        1024: {
+          slidesPerView: 3,
+          spaceBetween: 400,
+        },
+      },
+    });
+</script>
+{% endblock scripts %}
 {% endblock %}
