--- a/msa_back/manager_msa/templates/Videos/infos.html
+++ b/msa_back/manager_msa/templates/Videos/infos.html
@@ -157,7 +157,7 @@
                             <p class="m-0"><strong>Direção:</strong></p>
                             {% for c in credits.crew %}
                                 {% if c.job == 'Director' %}
-                                    <p>{{c.name}}, </p>
+                                    <p class="d-inline">{{c.name}}, </p>
                                 {% endif %}
                             {% endfor %}
                         </div>
